--- a/URmini-Waveshare/ui/07_report_list.ui
+++ b/URmini-Waveshare/ui/07_report_list.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>600</height>
+    <height>640</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>20</x>
       <y>20</y>
       <width>981</width>
-      <height>521</height>
+      <height>571</height>
      </rect>
     </property>
     <property name="font">
@@ -47,7 +47,7 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>790</x>
+       <x>770</x>
        <y>20</y>
        <width>181</width>
        <height>31</height>
@@ -69,25 +69,28 @@
      <property name="geometry">
       <rect>
        <x>290</x>
-       <y>450</y>
-       <width>101</width>
-       <height>41</height>
+       <y>490</y>
+       <width>91</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>RETURN</string>
+      <string>Return</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -102,26 +105,29 @@
     <widget class="QPushButton" name="pushButton_9">
      <property name="geometry">
       <rect>
-       <x>430</x>
-       <y>450</y>
-       <width>161</width>
-       <height>41</height>
+       <x>440</x>
+       <y>490</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>REPORT</string>
+      <string>Report</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -136,16 +142,18 @@
     <widget class="QListWidget" name="listWidget">
      <property name="geometry">
       <rect>
-       <x>430</x>
-       <y>90</y>
-       <width>501</width>
-       <height>321</height>
+       <x>440</x>
+       <y>100</y>
+       <width>511</width>
+       <height>351</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <item>
@@ -178,18 +186,18 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>60</y>
-       <width>101</width>
-       <height>41</height>
+       <x>60</x>
+       <y>70</y>
+       <width>91</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
@@ -199,17 +207,18 @@
     <widget class="QRadioButton" name="radioButton">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>20</y>
-       <width>111</width>
-       <height>31</height>
+       <x>50</x>
+       <y>10</y>
+       <width>101</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>Arial</family>
        <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
@@ -222,17 +231,18 @@
     <widget class="QRadioButton" name="radioButton_2">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>150</y>
+       <x>50</x>
+       <y>170</y>
        <width>121</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
+       <family>Arial</family>
        <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
@@ -242,18 +252,18 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>210</y>
-       <width>121</width>
-       <height>51</height>
+       <x>50</x>
+       <y>230</y>
+       <width>81</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
@@ -263,10 +273,10 @@
     <widget class="QLineEdit" name="lineEdit">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>220</y>
-       <width>181</width>
-       <height>41</height>
+       <x>170</x>
+       <y>230</y>
+       <width>191</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
@@ -280,18 +290,18 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>310</y>
+       <x>50</x>
+       <y>330</y>
        <width>101</width>
-       <height>51</height>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
        <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
       </font>
      </property>
      <property name="text">
@@ -301,10 +311,10 @@
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>320</y>
-       <width>181</width>
-       <height>41</height>
+       <x>170</x>
+       <y>330</y>
+       <width>191</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
@@ -318,9 +328,9 @@
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>120</y>
-       <width>351</width>
+       <x>0</x>
+       <y>150</y>
+       <width>411</width>
        <height>20</height>
       </rect>
      </property>
@@ -342,10 +352,10 @@
     <widget class="Line" name="line_2">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>390</y>
-       <width>361</width>
-       <height>16</height>
+       <x>0</x>
+       <y>430</y>
+       <width>411</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -367,25 +377,28 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>450</y>
+       <y>490</y>
        <width>101</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>SEARCH</string>
+      <string>Search</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -400,26 +413,29 @@
     <widget class="QPushButton" name="pushButton_11">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>450</y>
-       <width>111</width>
-       <height>41</height>
+       <x>150</x>
+       <y>490</y>
+       <width>101</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>RESET</string>
+      <string>Reset</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -435,9 +451,9 @@
      <property name="geometry">
       <rect>
        <x>400</x>
-       <y>10</y>
+       <y>0</y>
        <width>20</width>
-       <height>481</height>
+       <height>571</height>
       </rect>
      </property>
      <property name="font">
@@ -458,16 +474,16 @@
     <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>590</x>
-       <y>20</y>
-       <width>121</width>
-       <height>51</height>
+       <x>610</x>
+       <y>40</y>
+       <width>91</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -476,32 +492,35 @@
       <string notr="true">color: rgb(170, 0, 127);</string>
      </property>
      <property name="text">
-      <string>TEST LIST</string>
+      <string>Test List :</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_12">
      <property name="geometry">
       <rect>
        <x>630</x>
-       <y>450</y>
-       <width>111</width>
-       <height>41</height>
+       <y>490</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>VIEW</string>
+      <string>View</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -516,26 +535,29 @@
     <widget class="QPushButton" name="pushButton_13">
      <property name="geometry">
       <rect>
-       <x>800</x>
-       <y>450</y>
-       <width>131</width>
-       <height>41</height>
+       <x>820</x>
+       <y>490</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>14</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>PRINT</string>
+      <string>Print</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -550,10 +572,10 @@
     <widget class="QPushButton" name="pushButton_14">
      <property name="geometry">
       <rect>
-       <x>430</x>
-       <y>20</y>
+       <x>440</x>
+       <y>30</y>
        <width>101</width>
-       <height>41</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -566,10 +588,13 @@
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(170, 170, 127);
-</string>
+border-radius:20px;
+border-color: rgb(0, 0, 0);
+border-style:outset;
+border-width:4px;</string>
      </property>
      <property name="text">
-      <string>DELETE</string>
+      <string>Delete</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -584,10 +609,10 @@
     <widget class="QLineEdit" name="lineEdit_3">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>60</y>
-       <width>131</width>
-       <height>41</height>
+       <x>170</x>
+       <y>70</y>
+       <width>191</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="font">
