--- a/URmini-Waveshare/ui/11_patient_save.ui
+++ b/URmini-Waveshare/ui/11_patient_save.ui
@@ -49,7 +49,7 @@
       <rect>
        <x>710</x>
        <y>160</y>
-       <width>161</width>
+       <width>191</width>
        <height>41</height>
       </rect>
      </property>
@@ -717,6 +717,28 @@ border-width:4px;</string>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>320</y>
+       <width>51</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(0, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Age:</string>
      </property>
     </widget>
    </widget>
