--- a/LoadDispaly/ui/LD_01.ui
+++ b/LoadDispaly/ui/LD_01.ui
@@ -62,7 +62,7 @@
        <x>110</x>
        <y>110</y>
        <width>801</width>
-       <height>271</height>
+       <height>261</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -132,9 +132,9 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>170</y>
+        <y>140</y>
         <width>91</width>
-        <height>51</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -213,7 +213,7 @@ background-color: rgb(0, 0, 0);</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>100</y>
+        <y>90</y>
         <width>81</width>
         <height>41</height>
        </rect>
@@ -241,9 +241,9 @@ background-color: rgb(0, 0, 0);</string>
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>90</y>
+        <y>80</y>
         <width>111</width>
-        <height>61</height>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -269,9 +269,9 @@ background-color: rgb(0, 0, 0);</string>
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>160</y>
+        <y>140</y>
         <width>71</width>
-        <height>61</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -321,13 +321,83 @@ background-color: rgb(0, 0, 0);</string>
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>190</y>
+        <width>91</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Length :</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>190</y>
+        <width>91</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_16">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>190</y>
+        <width>41</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string>(mm.)</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>540</x>
-       <y>420</y>
-       <width>181</width>
+       <x>410</x>
+       <y>400</y>
+       <width>221</width>
        <height>71</height>
       </rect>
      </property>
@@ -359,48 +429,11 @@ border-width:4px;</string>
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_6">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>420</y>
-       <width>161</width>
-       <height>71</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(231, 154, 115);
-border-radius:20px;
-border-color: rgb(0, 0, 0);
-border-style:outset;
-border-width:4px;</string>
-     </property>
-     <property name="text">
-      <string>View Print</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>760</x>
-       <y>420</y>
+       <x>750</x>
+       <y>400</y>
        <width>151</width>
        <height>71</height>
       </rect>
@@ -436,8 +469,8 @@ border-width:4px;</string>
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>420</y>
+       <x>110</x>
+       <y>400</y>
        <width>151</width>
        <height>71</height>
       </rect>
