--- a/LoadDispaly/ui/LD_01.ui
+++ b/LoadDispaly/ui/LD_01.ui
@@ -35,22 +35,22 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>110</x>
        <y>20</y>
-       <width>331</width>
+       <width>801</width>
        <height>81</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>26</pointsize>
+       <pointsize>20</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Delta Electronics</string>
+      <string>Delta Electronics Pvt. Ltd</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -362,6 +362,9 @@ background-color: rgb(0, 0, 0);</string>
         <bold>true</bold>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(241, 255, 239);</string>
+      </property>
      </widget>
      <widget class="QLabel" name="label_16">
       <property name="geometry">
@@ -395,8 +398,8 @@ background-color: rgb(0, 0, 0);</string>
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>410</x>
-       <y>400</y>
+       <x>400</x>
+       <y>420</y>
        <width>221</width>
        <height>71</height>
       </rect>
@@ -433,7 +436,7 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>750</x>
-       <y>400</y>
+       <y>420</y>
        <width>151</width>
        <height>71</height>
       </rect>
@@ -470,7 +473,7 @@ border-width:4px;</string>
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>400</y>
+       <y>420</y>
        <width>151</width>
        <height>71</height>
       </rect>
