--- a/LoadDispaly/ui/LD_02_SET_MASTER.ui
+++ b/LoadDispaly/ui/LD_02_SET_MASTER.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1118</width>
-    <height>620</height>
+    <width>1020</width>
+    <height>548</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,8 +19,8 @@
      <rect>
       <x>30</x>
       <y>20</y>
-      <width>1041</width>
-      <height>551</height>
+      <width>951</width>
+      <height>461</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -35,22 +35,22 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>330</x>
+       <x>320</x>
        <y>20</y>
-       <width>331</width>
-       <height>81</height>
+       <width>251</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>26</pointsize>
+       <pointsize>20</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Delta Electronics</string>
+      <string>Master Data Set</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -59,8 +59,8 @@
     <widget class="QFrame" name="frame_2">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>110</y>
+       <x>90</x>
+       <y>80</y>
        <width>801</width>
        <height>271</height>
       </rect>
@@ -81,9 +81,54 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>20</y>
-        <width>91</width>
-        <height>61</height>
+        <y>30</y>
+        <width>181</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Company Name:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>30</y>
+        <width>451</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(241, 255, 239);</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>110</y>
+        <width>171</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -101,13 +146,13 @@
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="label_4">
+     <widget class="QLineEdit" name="lineEdit_2">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>20</y>
-        <width>71</width>
-        <height>61</height>
+        <x>220</x>
+        <y>110</y>
+        <width>131</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -119,23 +164,62 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 255);</string>
+       <string notr="true">background-color: rgb(241, 255, 239);</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>190</y>
+        <width>101</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
       </property>
       <property name="text">
-       <string>002</string>
+       <string>Length:</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_3">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>190</y>
+        <width>131</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(241, 255, 239);</string>
       </property>
      </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>420</y>
+       <x>550</x>
+       <y>380</y>
        <width>161</width>
-       <height>71</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -169,10 +253,10 @@ border-width:4px;</string>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>760</x>
-       <y>420</y>
+       <x>740</x>
+       <y>380</y>
        <width>151</width>
-       <height>71</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -191,7 +275,7 @@ border-style:outset;
 border-width:4px;</string>
      </property>
      <property name="text">
-      <string>Exit</string>
+      <string>Close</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -203,6 +287,34 @@ border-width:4px;</string>
       <bool>false</bool>
      </property>
     </widget>
+    <widget class="QLabel" name="label_47">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>380</y>
+       <width>251</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+       <underline>false</underline>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(170, 0, 255);</string>
+     </property>
+     <property name="text">
+      <string>Data Saved Successfully.</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -210,7 +322,7 @@ border-width:4px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1118</width>
+     <width>1020</width>
      <height>21</height>
     </rect>
    </property>
