--- a/LoadDispaly/ui/LD_03_CONFIRM_PRINT.ui
+++ b/LoadDispaly/ui/LD_03_CONFIRM_PRINT.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1118</width>
-    <height>620</height>
+    <width>953</width>
+    <height>502</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,11 +17,16 @@
    <widget class="QFrame" name="frame">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>20</y>
-      <width>1041</width>
-      <height>551</height>
+      <x>60</x>
+      <y>40</y>
+      <width>841</width>
+      <height>421</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(255, 255, 255, 255), stop:0.373979 rgba(255, 255, 255, 255), stop:0.373991 rgba(33, 30, 255, 255), stop:0.624018 rgba(33, 30, 255, 255), stop:0.624043 rgba(255, 0, 0, 255), stop:1 rgba(255, 0, 0, 255));
+border: 3px solid black;
+border-radius: 30px;</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
@@ -35,19 +40,24 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>20</y>
-       <width>801</width>
-       <height>81</height>
+       <x>20</x>
+       <y>30</y>
+       <width>461</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>20</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border: 2px solid black;
+border-radius: 25px;
+background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5,  stop:0.504819 rgba(255, 255, 255, 255), stop:0.79 rgba(255, 255, 255, 255), stop:1 rgba(255, 158, 158, 255));</string>
      </property>
      <property name="text">
       <string>Delta Electronics Pvt. Ltd</string>
@@ -59,14 +69,16 @@
     <widget class="QFrame" name="frame_2">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>110</y>
-       <width>801</width>
+       <x>50</x>
+       <y>120</y>
+       <width>761</width>
        <height>261</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 196, 197);</string>
+      <string notr="true">background-color: rgb(255, 196, 197);
+border: 2px solid black;
+border-radius: 25px;</string>
      </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
@@ -94,6 +106,9 @@
         <bold>true</bold>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:None;</string>
+      </property>
       <property name="text">
        <string>Unit No:</string>
       </property>
@@ -119,7 +134,8 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 255);</string>
+       <string notr="true">color: rgb(0, 0, 255);
+border:None;</string>
       </property>
       <property name="text">
        <string>002</string>
@@ -145,6 +161,9 @@
         <bold>true</bold>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:None;</string>
+      </property>
       <property name="text">
        <string>Time:</string>
       </property>
@@ -152,40 +171,11 @@
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QLCDNumber" name="lcdNumber">
-      <property name="geometry">
-       <rect>
-        <x>320</x>
-        <y>90</y>
-        <width>391</width>
-        <height>131</height>
-       </rect>
-      </property>
-      <property name="layoutDirection">
-       <enum>Qt::LeftToRight</enum>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(0, 170, 0);
-background-color: rgb(0, 0, 0);</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::Box</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Plain</enum>
-      </property>
-      <property name="lineWidth">
-       <number>3</number>
-      </property>
-      <property name="value" stdset="0">
-       <double>20000.000000000000000</double>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_15">
       <property name="geometry">
        <rect>
-        <x>720</x>
-        <y>180</y>
+        <x>610</x>
+        <y>20</y>
         <width>41</width>
         <height>41</height>
        </rect>
@@ -193,14 +183,14 @@ background-color: rgb(0, 0, 0);</string>
       <property name="font">
        <font>
         <family>Arial</family>
-        <pointsize>16</pointsize>
+        <pointsize>12</pointsize>
         <weight>75</weight>
         <bold>true</bold>
         <underline>false</underline>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">border:None;</string>
       </property>
       <property name="text">
        <string>Kg.</string>
@@ -228,7 +218,8 @@ background-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 0);</string>
+       <string notr="true">color: rgb(0, 0, 0);
+border:None;</string>
       </property>
       <property name="text">
        <string>Date :</string>
@@ -256,7 +247,8 @@ background-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 255);</string>
+       <string notr="true">color: rgb(0, 0, 255);
+border:None;</string>
       </property>
       <property name="text">
        <string>05 Aug 2020</string>
@@ -284,7 +276,8 @@ background-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">color: rgb(0, 0, 255);</string>
+       <string notr="true">color: rgb(0, 0, 255);
+border:None;</string>
       </property>
       <property name="text">
        <string>14:30</string>
@@ -299,35 +292,7 @@ background-color: rgb(0, 0, 0);</string>
         <x>320</x>
         <y>20</y>
         <width>171</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Arial</family>
-        <pointsize>16</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-        <underline>false</underline>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color: rgb(170, 0, 255);</string>
-      </property>
-      <property name="text">
-       <string>Gross Weight:</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>190</y>
-        <width>91</width>
-        <height>51</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -336,18 +301,26 @@ background-color: rgb(0, 0, 0);</string>
         <pointsize>12</pointsize>
         <weight>75</weight>
         <bold>true</bold>
+        <underline>false</underline>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(241, 255, 239);</string>
+       <string notr="true">color: rgb(170, 0, 255);
+border:None;</string>
+      </property>
+      <property name="text">
+       <string>Gross Weight:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
      <widget class="QLabel" name="label_16">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>190</y>
-        <width>41</width>
+        <x>220</x>
+        <y>200</y>
+        <width>51</width>
         <height>41</height>
        </rect>
       </property>
@@ -361,22 +334,22 @@ background-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">border:None;</string>
       </property>
       <property name="text">
-       <string>(mm.)</string>
+       <string> (mm.)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox">
+     <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>20</x>
         <y>200</y>
-        <width>101</width>
-        <height>31</height>
+        <width>91</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -387,55 +360,138 @@ background-color: rgb(0, 0, 0);</string>
         <bold>true</bold>
        </font>
       </property>
+      <property name="styleSheet">
+       <string notr="true">border:None;</string>
+      </property>
       <property name="text">
-       <string>Length :</string>
+       <string>Length:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
-    </widget>
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="geometry">
-      <rect>
-       <x>400</x>
-       <y>420</y>
-       <width>221</width>
-       <height>71</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(85, 170, 0);
-border-radius:20px;
-border-color: rgb(0, 0, 0);
-border-style:outset;
-border-width:4px;</string>
-     </property>
-     <property name="text">
-      <string>Set Master Info</string>
-     </property>
-     <property name="autoDefault">
-      <bool>true</bool>
-     </property>
-     <property name="default">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
+     <widget class="QLabel" name="label_40">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>200</y>
+        <width>71</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+        <underline>false</underline>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 0, 255);
+border:None;</string>
+      </property>
+      <property name="text">
+       <string>50</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>20</y>
+        <width>71</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border:None;
+color: rgb(0, 0, 255);</string>
+      </property>
+      <property name="text">
+       <string>500</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>80</y>
+        <width>91</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border:None;</string>
+      </property>
+      <property name="text">
+       <string>Comments:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>90</y>
+        <width>256</width>
+        <height>131</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 255, 255);
+border: 1px solid black;
+border-radius: 10px;</string>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:12pt; font-weight:600; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400;&quot;&gt;xxdddd&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>750</x>
-       <y>420</y>
-       <width>151</width>
-       <height>71</height>
+       <x>680</x>
+       <y>30</y>
+       <width>121</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -454,7 +510,7 @@ border-style:outset;
 border-width:4px;</string>
      </property>
      <property name="text">
-      <string>Exit</string>
+      <string>Close</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -469,10 +525,10 @@ border-width:4px;</string>
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>420</y>
+       <x>510</x>
+       <y>30</y>
        <width>151</width>
-       <height>71</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -491,7 +547,7 @@ border-style:outset;
 border-width:4px;</string>
      </property>
      <property name="text">
-      <string>Print</string>
+      <string>Confirm Print</string>
      </property>
      <property name="autoDefault">
       <bool>true</bool>
@@ -504,16 +560,6 @@ border-width:4px;</string>
      </property>
     </widget>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1118</width>
-     <height>21</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
