--- a/TYR_2.0_18.5/ui/TY_07_UTM_MANNUAL_CONTROL_4.ui
+++ b/TYR_2.0_18.5/ui/TY_07_UTM_MANNUAL_CONTROL_4.ui
@@ -151,7 +151,7 @@ background-color: rgb(255, 231, 254);</string>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>350</x>
         <y>180</y>
         <width>691</width>
         <height>51</height>
@@ -422,9 +422,9 @@ background-color: rgb(255, 231, 254);</string>
      <widget class="QPushButton" name="pushButton_3">
       <property name="geometry">
        <rect>
-        <x>900</x>
+        <x>1030</x>
         <y>60</y>
-        <width>211</width>
+        <width>141</width>
         <height>61</height>
        </rect>
       </property>
@@ -562,7 +562,7 @@ color: rgb(255, 0, 0);</string>
      <widget class="QPushButton" name="pushButton_4">
       <property name="geometry">
        <rect>
-        <x>700</x>
+        <x>650</x>
         <y>300</y>
         <width>151</width>
         <height>71</height>
@@ -585,13 +585,13 @@ border-radius:20px;
 background-color: rgb(255, 231, 254);</string>
       </property>
       <property name="text">
-       <string>Mannual Stop</string>
+       <string>Stop</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
-        <x>910</x>
+        <x>880</x>
         <y>300</y>
         <width>241</width>
         <height>71</height>
@@ -615,6 +615,88 @@ background-color: rgb(255, 231, 254);</string>
       </property>
       <property name="text">
        <string>Mannual Control</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox">
+      <property name="geometry">
+       <rect>
+        <x>860</x>
+        <y>70</y>
+        <width>51</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-style:outset;
+border-color: rgb(0, 0, 0);
+border-width:4px;
+color: rgb(0, 0, 0);
+border-radius:0px;
+background-color: rgb(255, 231, 254);</string>
+      </property>
+      <item>
+       <property name="text">
+        <string>1</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>2</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="Line" name="line_4">
+      <property name="geometry">
+       <rect>
+        <x>980</x>
+        <y>0</y>
+        <width>20</width>
+        <height>161</height>
+       </rect>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>810</x>
+        <y>20</y>
+        <width>161</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(0, 85, 0);</string>
+      </property>
+      <property name="text">
+       <string>Load Cell No :</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
